# NASA-Astronet

./: INSTALL  README.md  install_astrobee.sh
Install Logs/: addROS.txt  buildError.txt  builde.txt  installDeb.txt  log
aerolab/: CMakeLists.txt  package.xml
aerolab/launch/: astronet.launch  hbirdb.launch  hbirddg.launch  pubState.launch
aerolab/matlab/: HRI_Coverage_and_Tasks_1_quad_sim.m  HRI_Coverage_and_Tasks_2_quads_main.m  HRI_Coverage_and_Tasks_2_quads_sim.m  HumanOptimalIND_RobotMine.m  Human_Robot_Dec_2017.m  Human_Robot_Feb_2018.m  Human_Robot_Mar_2018.m  Plot_maker.m  Skeleton_Velocity_Control_Script.m  Three_Dee_Outdoor_With_UKF.m  UKFnew.m  UKFnew_works_sorta.m  imuCallback_1.m  lasercallback.m  leddar.m  lidar.m  outdoorpoints.txt  ptcallback.m  quatprod.m  statusCallback_1.m  statusCallback_2.m  statusCallback_3.m  statusCallback_5.m  statusCallback_6.m  testROS.m  threedeecoverage_Auton_Robot_2.m  threedeecoverage_V7_Hemispheres_V4.m  threedeecoverage_kinematic_control_3agents_NoXtraAvoid.m  viconCallback_1.m  viconCallback_2.m  viconCallback_4.m  viconCallback_5.m  viconCallback_6.m  viconCallback_Oculus.m  viconCallback_Right_Arm.m  viconCallback_William.m  viconCallback_hbirdb.m  viconCallback_hbirddg.m  xyzCallback_1.m  xyzCallback_3.m  (+2 more)
aerolab/nodes/: hbirdbState.cpp  hbirddgPub.cpp  hbirddgState.cpp  viconViz.cpp
aerolab/nodes/test/: command.cpp  publish.cpp  randvel.cpp  test.cpp
aerolab/rviz/: Oculus.rviz
asctec_mav_framework/asctec_hl_comm/: package.xml
asctec_mav_framework/matlab_gen/jar/: asctec_hl_interface-0.1.0.md5  asctec_mav_framework-0.1.0.md5
astrobee/: CMakeLists.txt  package.xml
astrobee/launch/: aerolab-vicon.launch  aerolab.launch  aerolab_no_vicon.launch  aerolab_vicon.launch  astronet.launch
astrobee/media/iss/: model-1_4.sdf  model.sdf
astrobee/scripts/: spawn_model
astrobee/worlds/: aerolab-vicon.world  aerolab.world
astrobee_description/urdf/: astrobee.urdf.xacro  astrobee_base_link.urdf.xacro  astrobee_carriage.urdf.xacro  astrobee_macro_perching_arm.urdf.xacro  astrobee_macro_tracker.urdf.xacro  dock_base_link.urdf.xacro
astronet/: CMakeLists.txt
astronet/launch/: astronet.launch  getState.launch  hbirdb.launch  hbirddg.launch  pubState.launch  pubStates.launch
astronet/matlab/: GPS_Walk_11-29.mat  HRI_Coverage_and_Tasks_1_quad_sim.m  HRI_Coverage_and_Tasks_2_quads.m  HRI_Coverage_and_Tasks_main.m  PlotFan.m  Skeleton_Velocity_Control_Script_3_quads.m  Three_Agents_Noise.m  battery_Plots.m  imuCallback_2.m  statusCallback_4.m  superimposeGPS.m  testROS.m  threedeecoverage_kinematic_control (another copy).m  threedeecoverage_kinematic_control_3agents.m  threedeecoverage_kinematic_control_outdoor.m  ukf.m  viconCallback_3.m  viconCallback_Left_Arm.m  viconCallback_hbirdb.m  viconCallback_hbirddg.m  viconCallback_quad_1.m  viconCallback_quad_2.m  xyzCallback_4.m
astronet/nodes/: hbirdbPub.cpp  hbirdbState.cpp  hbirddgPub.cpp  hbirddgState.cpp  oculusViz.cpp  publisher.cpp  viconViz.cpp
astronet/nodes/test/: states.cpp
dependencies/: README.md
dependencies/matlab_gen/jar/: catkin_simple-0.1.1.md5
ethzasl_msf/msf_core/: CMakeLists.txt
ethzasl_msf/msf_timing/: CMakeLists.txt
glog_catkin/: CMakeLists.txt
matlab_gen/jar/: glog_catkin-0.0.0.md5  vicon_bridge-1.0.1.md5
matlab_gen/msggen/: javaclasspath.txt
(+40 files in other folders)
