<?xml version="1.0"?>
<package>
  <name>astrobee</name>
  <version>0.0.0</version>
  <description>Astrobee Simulator Bare Bones</description>
  <maintainer email="sdhanjal@umich.edu">Sahib Dhanjal</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
